fix modal for each meal

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
 
 .fw-700 { font-weight: 700; }
 
+.mt-300 { margin-top: 150px; }
+
 .container-fluid { padding-left: 0 !important; padding-right: 0 !important; }
 /* #endregion general */
 
